RepTate/theories/react_source_c_code/polybits.h

typedef struct
{
    int maxbobbins;
    int maxmwdbins;
    int maxarm; //  maxarm=10000000;
    int maxpol;
    int maxreact;
} polybits_global_const;
typedef struct
{
 int first_in_pool;
 int first_poly_in_pool;
 int first_dist_in_pool;
 int mmax;
 int num_react;
 int arms_left;
 bool react_pool_initialised;
 bool react_pool_declared;
 bool arms_avail;  // these flags simply record
 bool polys_avail; // availability of arms
 bool dists_avail;
} polybits_global;
extern polybits_global_const pb_global_const;
extern polybits_global pb_global;
extern reactresults *react_dist;
extern void react_pool_init(void);
extern bool request_poly(int *); // returns false if no polymers left
extern bool request_dist(int *); // returns false if no distributions left
extern void return_dist(int);
extern void return_dist_polys(int);